# r-tftpd

./: .gitignore  Cargo.toml.m4  Makefile  README.md
.cargo/: config.m4
.github/workflows/: rust-clippy.yml  rust-grcov.yml  rust.yml
.gitlab/: sigma-ci.yml
contrib/: Makefile.mk  r-tftpd.service  r-tftpd.service.in  r-tftpd.socket  rust-r-tftpd.spec
mk/: cargo-util.mk  cargo.mk  grcov.mk  init.mk  m4.mk  paths.mk  tools.mk
mod-proxy/: Cargo.toml  README.md
mod-proxy/src/: cache.rs  errors.rs  lib.rs  uri.rs  util.rs
mod-proxy/src/http/: cache_info.rs  header.rs  mod.rs  time.rs
scripts/: run-tftp
src/: errors.rs  main.rs  test.rs
src/fetcher/: builder.rs  cache.rs  fetcher.rs  file.rs  memory.rs  mod.rs  uri.rs
src/fetcher/http/: cache_control.rs  cache_info.rs  errors.rs  header.rs  mod.rs  multi-header.rs  time.rs
src/test/: httpd.rs
src/tftp/: datagram.rs  errors.rs  mod.rs  mode.rs  oack.rs  request.rs  sequence_id.rs  session.rs  session_stats.rs  xfer.rs
src/util/: bucket.rs  mod.rs  socketaddr.rs  udpsocket.rs  uninit.rs
