[package]
name = "r-tftpd-proxy"
version = "0.1.0"
edition = "2021"

[features]
legacy_rust_175 = []

[dependencies]
reqwest = { version  = "*", default-features = false, features = ["default-tls", "gzip", "brotli", "deflate", "socks"] }
tempfile = "*"
httpdate = "*"
futures-core = "*"
bytes = "*"
bitflags = "*"

tokio = { version = "1", default-features = false, features = ["rt", "time", "net", "macros"] }
thiserror = "*"
lazy_static = "*"
nix = "*"
tracing = "*"
url = "*"
