[package]
name = "r-tftpd-proxy"
version = "0.2.0"
edition = "2021"
description = "Helper module which implements http proxy support for r-tftpd"
repository = "https://gitlab-ext.sigma-chemnitz.de/ensc/r-tftpd"
homepage = "https://github.com/ensc/r-tftpd"
license = "GPL-3.0-or-later"

[features]
legacy_rust_179 = []

[dependencies]
reqwest = { version  = "*", default-features = false, features = ["default-tls", "gzip", "brotli", "deflate", "socks"] }
tempfile = "*"
httpdate = "*"
futures-core = "*"
bytes = "*"
bitflags = "*"

tokio = { version = "1", default-features = false, features = ["rt", "time", "net", "macros"] }
thiserror = "*"
lazy_static = "*"
nix = "*"
tracing = "*"
url = "*"
